--- a/uw-ethesis-frontpgs.tex
+++ b/uw-ethesis-frontpgs.tex
@@ -78,7 +78,7 @@ This thesis consists mostly of chapters written for conference research paper su
 Sruthi Venkatanarayanan was the sole author for Chapter~\ref{sec:applications}, which was written under the
 supervision of Dr. Patrick Lam. Sruthi was responsible for developing the tool that performs the static and dynamic analyses, 
 carrying out data collection and analysis and developing the VizAPI visualization tool.
-Sruthi and Dr. Patrick Lam were co-authors for Chapters~\ref{sec:introduction}, \ref{sec:related}, \ref{sec:apiusage} and \ref{sec:conclusion}.
+Sruthi, Dr. Patrick Lam and Dr. Jens Dietrich were co-authors for Chapters~\ref{sec:introduction}, \ref{sec:related}, \ref{sec:apiusage} and \ref{sec:conclusion}.
   \bigskip
   
   \noindent
@@ -100,7 +100,9 @@ Software projects make use of libraries extensively. Libraries have intended API
 % -------------------------------
 
 \begin{center}\textbf{Acknowledgements}\end{center}
+Firstly, I would like to thank Dr. Patrick Lam for patiently and constantly guiding me for the past two years. I have learnt perseverance and optimism from you, and this thesis would not have been possible without your ideas and encouragement.
 
+I would also like to thank Dr. Jens Dietrich, our collaborator from the Victoria University of Wellington, for his invaluable inputs and for his multiple ideas to take this work in new interesting directions.
 
 \cleardoublepage
 
