--- a/artifact.tex
+++ b/artifact.tex
@@ -8,9 +8,9 @@ We next describe the input to VizAPI. To run on a benchmark, the tool expects a 
 
 \begin{enumerate}
 \item The first format, shown immediately below, is to be used when data for the project already exists in \texttt{apis-data}. In this case, the artifact ID of the project (which can be arbitrarily chosen by the user) and the type of the project (whether it is a client or library) need to be specified.
-\lstinputlisting[language=json,label=listing:input-format-1]{code-snippets/input-format-1.json}
+\lstinputlisting[language=json,caption=Input Format,label=listing:input-format-1]{code-snippets/input-format-1.json}
 \item The second is to be used when data for the project does not exist in \texttt{apis-data}. Again, the artifact ID of the project and the type of the project (whether it is a client or library) still need to be specified. Since the data do not exist, VizAPI also needs to capture instrumentation data, and hence VizAPI expects the URL and commit ID of the project. VizAPI expects the project to be in Maven format and can automatically execute the project's tests.
-\lstinputlisting[language=json,label=listing:input-format-2]{code-snippets/input-format-2.json}
+\lstinputlisting[language=json,caption=Input Format,label=listing:input-format-2]{code-snippets/input-format-2.json}
 \end{enumerate}
 
 \section{Running VizAPI with Docker}
@@ -35,7 +35,7 @@ In both cases, i.e., with and without Docker, the final graph is generated with 
 main directory.
 
 The following is an example input.json needed to reproduce the Graph 1 at \href{https://sruthivenkat.github.io/VizAPI-graph/}{https://sruthivenkat.github.io/VizAPI-graph/}:
-\lstinputlisting[language=json,label=listing:input-example]{code-snippets/input-example.json}
+\lstinputlisting[language=json,caption=Input Example,label=listing:input-example]{code-snippets/input-example.json}
 
 Some points to note are:
 \begin{enumerate}
