--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -1,6 +1,17 @@
 % Bibliography of key references for "LaTeX for Thesis and Large Documents"
 % For use with BibTeX
 
+@article{amann2018systematic,
+  title={A systematic evaluation of static api-misuse detectors},
+  author={Amann, Sven and Nguyen, Hoan Anh and Nadi, Sarah and Nguyen, Tien N and Mezini, Mira},
+  journal={IEEE Transactions on Software Engineering},
+  volume={45},
+  number={12},
+  pages={1170--1188},
+  year={2018},
+  publisher={IEEE}
+}
+
 @book{goossens.book,
 	author =	"Michel Goossens and Frank Mittelbach and 
 			 Alexander Samarin",
